[package]
name = "webm-sys"
description = "Rust FFI bindings and wrapper for libwebm"
version = "1.0.0"
authors = [
    "Kornel Lesiński <kornel@geekhood.net>",
    "Richard Diamond <wichard@vitalitystudios.com>",
]
documentation = "https://docs.rs/webm"
homepage = "https://crates.rs/crates/webm-sys"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/DiamondLovesYou/rust-webm.git"
include = [
    "src/lib.rs", "build.rs", "Cargo.toml",
    "ffi.cpp",
    "libwebm/*.hpp",
    "libwebm/common/*.h",
    "libwebm/mkvmuxer/*.cc",
    "libwebm/mkvmuxer/*.h",
    "libwebm/mkvparser/*.cc",
    "libwebm/mkvparser/*.h",
]
keywords = ["webm", "mkv", "matroska", "vp9"]
categories = [ "external-ffi-bindings", "multimedia::encoding" ]
edition = "2018"

[build-dependencies]
cc = "1.0.3"
